--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,6 +67,7 @@
         "react/jsx-props-no-spreading": "off",
         "no-unused-vars": "off",
         "unused-imports/no-unused-imports": "error",
+        "react/require-default-props": "off",
         "unused-imports/no-unused-vars": [
             "warn",
             {
