--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-hash-link": "^2.4.5",
     "@types/react-scroll": "^1.8.4",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-unused-imports": "^2.0.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
     "typescript": "^4.4.2",
