--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "@iconify/react": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
