--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@iconify/react": "^4.0.0",
     "@mui/material": "^5.10.10",
     "@mui/styles": "^5.10.10",
     "@testing-library/jest-dom": "^5.14.1",
@@ -20,6 +21,7 @@
     "@types/react-scroll": "^1.8.4",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "firebase": "^9.13.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,8 +30,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "@iconify/react": "^4.0.0"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
