--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-router-hash-link": "^2.4.5",
     "@types/react-scroll": "^1.8.4",
+    "@types/react-slick": "^0.23.10",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^9.13.0",
@@ -31,6 +32,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
